# Cursemap

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/: 404.html  index.html
