[package]
name = "cursemap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["json"] }
rusqlite = "0.29.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread", "time"] }
